[workspace]
members = [
    "bin",

    "book-gen",

    "hls",

    "libs/common",
    "libs/config",
    "libs/format",
    "libs/lzo",
    "libs/p3d",
    "libs/paa",
    "libs/pbo",
    "libs/preprocessor",
    "libs/signing",
    "libs/sqf",
    "libs/stringtable",
    "libs/workspace",
    "libs/wss",

    "libs/testing",

    "arma",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/BrettMayson/HEMTT"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
cognitive_complexity = "allow"
too_many_lines = "allow"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"

[workspace.dependencies]
arma3-wiki = "0.4.4"
automod =  "1.0.15"
byteorder = "1.5.0"
chumsky = "0.9.3"
clap = "4.5.53"
codespan-reporting = { version = "0.13.1", features = ["serialization"] }
dashmap = "6.1.0"
dirs = "6.0.0"
fs_extra = "1.3.0"
fs-err = "=3.1.3"
git2 = "0.20.2"
indexmap = "2.12.1"
insta = "1.43.2"
interprocess = "2.2.3"
linkme = "0.3.35"
lsp-types = "0.97.0"
paste = "1.0.15"
peekmore = "1.3.0"
pest = "2.8.4"
pest_derive = "2.8.4"
rand = "0.9.2"
regex = "1.12.2"
rustc-hash = "2.1.1"
rustversion = "1.0.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha-1 = "0.10.1"
strsim = "0.11.1"
supports-hyperlinks = "3.1.0"
tabled = "0.20.0"
terminal-link = "0.1.0"
thiserror = "2.0.17"
toml = "0.9.8"
tower-lsp = "0.20.0"
tracing = { version = "0.1.43", features = ["attributes"] }
tracing-test = "0.2.5"
vfs = "0.12.2"
walkdir = "2.5.0"
zip = "7.0.0"

[profile.perf]
inherits = "release"
debug = true
strip = "none"
opt-level = 3
lto = false
codegen-units = 1 
