[workspace]
members = [
    "bin",

    "book-gen",

    "hls",

    "libs/common",
    "libs/config",
    "libs/lzo",
    "libs/p3d",
    "libs/paa",
    "libs/pbo",
    "libs/preprocessor",
    "libs/signing",
    "libs/sqf",
    "libs/stringtable",
    "libs/workspace",
    "libs/wss",

    "libs/testing",

    "arma",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/BrettMayson/HEMTT"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
cognitive_complexity = "allow"
too_many_lines = "allow"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"

[workspace.dependencies]
arma3-wiki = "0.4.5"
automod =  "1.0.16"
byteorder = "1.5.0"
chumsky = "0.9.3"
clap = "4.5.57"
codespan-reporting = { version = "0.13.1", features = ["serialization"] }
dashmap = "6.1.0"
dirs = "6.0.0"
fs_extra = "1.3.0"
fs-err = "3.3.0"
git2 = "0.20.4"
indexmap = "2.13.0"
insta = "1.46.3"
interprocess = "2.3.1"
linkme = "0.3.35"
lsp-types = "0.97.0"
paste = "1.0.15"
peekmore = "1.3.0"
pest = "2.8.6"
pest_derive = "2.8.6"
rand = "0.9.2"
regex = "1.12.3"
rustc-hash = "2.1.1"
rustversion = "1.0.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha-1 = "0.10.1"
strsim = "0.11.1"
supports-hyperlinks = "3.2.0"
tabled = "0.20.0"
terminal-link = "0.1.0"
thiserror = "2.0.18"
toml = "0.9.11+spec-1.1.0"
tower-lsp = "0.20.0"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-test = "0.2.6"
vfs = "0.12.2"
walkdir = "2.5.0"
zip = "7.4.0"

[profile.perf]
inherits = "release"
debug = true
strip = "none"
opt-level = 3
lto = false
codegen-units = 1 
