[package]
name = "hemtt-comm"
authors = ["Brett Mayson <brett@mayson.io>"]
version = "0.1.0"
edition = "2024"

[lib]
name = "hemtt_comm"
crate-type = ["cdylib"]

[dependencies]
hemtt-common = { path = "../libs/common" }

arma-rs = "1.10.5"
serde_json = { workspace = true }
windows = { version = "0.62.1", features = ["Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D"] }
