[package]
name = "hemtt-comm"
authors = ["Brett Mayson <brett@mayson.io>"]
version = "0.1.0"
edition = "2024"

[lib]
name = "hemtt_comm"
crate-type = ["cdylib"]

[dependencies]
hemtt-common = { path = "../libs/common" }

arma-rs = { git = "https://github.com/BrettMayson/arma-rs.git" }
interprocess =  { workspace = true }
serde_json = { workspace = true }
