[package]
name = "hemtt-bench"
version = "1.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
hemtt-common = { path = "../libs/common" }
hemtt-sqf = { path = "../libs/sqf" }
hemtt-preprocessor = { path = "../libs/preprocessor" }
hemtt-workspace = { path = "../libs/workspace" }

hemtt = { path = "../bin" }

automod = { workspace = true }
arma-bench = { git = "https://github.com/brettmayson/arma-bench", branch = "main" }
serde_json = { workspace = true }
