[package]
name = "hemtt-book-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
hemtt = { path = "../bin" }
hemtt-common = { path = "../libs/common" }
hemtt-config = { path = "../libs/config" }
hemtt-sqf = { path = "../libs/sqf" }
hemtt-stringtable = { path = "../libs/stringtable" }
hemtt-workspace = { path = "../libs/workspace" }

arma3-wiki = { workspace = true }
clap = { workspace = true, features = ["derive"] }
fs-err = { workspace = true }
serde_json = { workspace = true }

mdbook-preprocessor = "0.5.1"
