[package]
name = "hemtt-app"
version = "0.8.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hemtt = { path = "../hemtt" }
hemtt-cache = { path = "../hemtt-cache" }
hemtt-handlebars = { path = "../hemtt-handlebars" }
hemtt-macros = { path = "../hemtt-macros" }

clap = "2"
dyn-clone = "1.0"
git2 = "0.13"
glob = "0.3"
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.1"
rayon = "1.4"
regex = "1.3"
simplelog = "0.8"
strum = "0.19"
toml = "0.5"
walkdir = "2.3"
webbrowser = "0.5"
