[package]
name = "hemtt-app"
version = "0.8.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

[dependencies]
hemtt = { path = "../hemtt" }
hemtt-arma-config = { path = "../hemtt-arma-config" }
hemtt-handlebars = { path = "../hemtt-handlebars" }
hemtt-macros = { path = "../hemtt-macros" }

clap = "2"
dyn-clone = "1.0"
git2 = "0.13"
glob = "0.3"
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.1"
rayon = "1.5"
regex = "1.4"
simplelog = "0.9"
strum = "0.20"
toml = "0.5"
vfs = "0.4"
walkdir = "2.3"
webbrowser = "0.5"
