[package]
name = "hemtt-arma-config"
version = "0.1.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

[dependencies]
hemtt = { path = "../hemtt" }
hemtt-io = { path = "../hemtt-io" }
byteorder = "1.4"
log = "0.4"
pest = "2.1"
pest_derive = "2.1"

serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }

[features]
default = ["maps"]

maps = ["serde", "serde_json"]
