[package]
name = "hemtt-handlebars"
version = "0.1.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
handlebars = "3.5"
git2 = "0.13"
serde_json = "1.0"
shell-words = "1"
semver = { version = "0.11", features = ["serde"] }
