[package]
name = "hemtt-io"
version = "0.1.0"
authors = ["Brett <brett@bmandesigns.com>"]
edition = "2018"

[dependencies]
async-trait = { vesrion = "0.1", optional = true }
tokio = { version = "1.0", optional = true, features = ["full"] }

[features]
default = ["async-tokio"]
async-tokio = ["async-trait", "tokio"]
