[package]
name = "hemtt-pbo"
version = "0.1.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

[dependencies]
hemtt-io = { path = "../hemtt-io" }

log = "0.4"
byteorder = "1.4"
sha-1 = "0.9"
indexmap = "1.6.1"

async-trait = { vesrion = "0.1", optional = true }
tokio = { version = "1.0", optional = true, features = ["full"] }

[features]
default = ["async-tokio"]
async-tokio = ["async-trait", "tokio", "hemtt-io/async-tokio"]
