[package]
name = "hemtt-project"
version = "0.1.0"
authors = ["Brett <brett@bmandesigns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hemtt = { path = "../hemtt" }

log = "0.4"
serde = { version = "1.0", features = ["derive"] }
semver = { version = "0.10", features = ["serde"] }
rust-embed="5.5"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
