[package]
name = "hemtt-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
arma-rs = { git = "https://github.com/synixebrett/arma-rs", branch = "expirement" }
hemtt = { path = "../hemtt" }
hemtt-macros = { path = "../hemtt-macros" }
regex = "1.5"
rust-embed="6.0"
winreg = "0.9"
enigo = "0.0"
