[package]
name = "hemtt"
version = "0.9.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hemtt-handlebars = { path = "../hemtt-handlebars" }
hemtt-macros = { path = "../hemtt-macros" }

byteorder = "1"
config = "0.10"
glob = "0.3"
log = "0.4"
rust-embed="5.6"
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.19"
strum_macros = "0.19"

[target.'cfg(windows)'.dependencies]
winreg = "0.7"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
peg = "0.5"
