[package]
name = "hemtt"
version = "0.9.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

[dependencies]
hemtt-handlebars = { path = "../hemtt-handlebars" }
hemtt-macros = { path = "../hemtt-macros" }
hemtt-io = { path = "../hemtt-io" }

byteorder = "1"
config = "0.11"
glob = "0.3"
handlebars = "4.0"
log = "0.4"
rust-embed="6.0"
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
vfs = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.7"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
