[package]
name = "hemtt-language-server"
version = "0.5.1"
edition = "2021"

[dependencies]
hemtt = { path = "../bin" }
hemtt-common = { path = "../libs/common" }
hemtt-config = { path = "../libs/config" }
hemtt-preprocessor = { path = "../libs/preprocessor" }
hemtt-sqf = { path = "../libs/sqf" }
hemtt-workspace = { path = "../libs/workspace" }

arma3-wiki = { workspace = true }
chumsky = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dashmap = "6.1.0"
regex = { workspace = true }
ropey = "1.6.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = { workspace = true, features = ["proposed"]}
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
url = "2.5.4"
urlencoding = "2.1.3"
vfs = { workspace = true }

[build-dependencies]
arma3-wiki = { workspace = true }
