[package]
name = "hemtt-common"
version = "1.0.0"
edition = "2024"
description = "A library for common Hemtt functionality"
license = "GPL-2.0"

[lints]
workspace = true

[dependencies]
codespan-reporting = { workspace = true }
enable-ansi-support = "0.3.1"
fs-err = { workspace = true }
gag = "1.0.0"
git2 = { workspace = true }
rustversion = { workspace = true }
serde = { workspace = true }
steamlocate = "2.1.0"
strsim = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
vfs = { workspace = true }

[dev-dependencies]
strum = { version = "0.28.0", features = ["derive"] }
tracing-test = { workspace = true }
