[package]
name = "hemtt-config"
version = "1.0.0"
edition = "2024"
description = "A config parser library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common", version = "1.0.0" }
hemtt-preprocessor = { path = "../preprocessor", version = "1.0.0" }
hemtt-workspace = { path = "../workspace", version = "1.0.0" }

automod = { workspace = true }
byteorder = { workspace = true }
chumsky = { workspace = true }
linkme = { workspace = true }
lsp-types = { workspace = true }
toml = { workspace = true }
vfs = { workspace = true }

[dev-dependencies]
hemtt-preprocessor = { path = "../preprocessor" }
insta = { workspace = true }
paste = { workspace = true }
