[package]
name = "hemtt-config"
version = "1.0.0"
edition = "2024"
description = "A config parser library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common" }
hemtt-preprocessor = { path = "../preprocessor" }
hemtt-workspace = { path = "../workspace" }

automod = { workspace = true }
byteorder = { workspace = true }
chumsky = { workspace = true }
indexmap = { workspace = true }
linkme = { workspace = true }
lsp-types = { workspace = true }
toml = { workspace = true }
vfs = { workspace = true }

serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }

[dev-dependencies]
hemtt-preprocessor = { path = "../preprocessor" }
insta = { workspace = true }
paste = { workspace = true }

[features]
json = ["serde", "serde_json"]
