[package]
name = "hemtt-config"
version = "1.0.0"
edition = "2024"
description = "A config parser library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common" }
hemtt-preprocessor = { path = "../preprocessor" }
hemtt-workspace = { path = "../workspace" }

automod = { workspace = true }
byteorder = { workspace = true }
chumsky = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
linkme = { workspace = true }
lsp-types = { workspace = true }
toml = { workspace = true }

serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
hemtt-preprocessor = { path = "../preprocessor" }
insta = { workspace = true }
paste = { workspace = true }

