[package]
name = "hemtt-lzo"
version = "1.0.1"
edition = "2024"
description = "An LZO library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[dependencies]
libc = "0.2.176"
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["compress", "decompress"]
compress = []
decompress = []
