[package]
name = "hemtt-p3d"
version = "1.0.0"
edition = "2024"
description = "An P3d library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[dependencies]
hemtt-common = { path = "../common" }
hemtt-workspace = { path = "../workspace" }

byteorder = { workspace = true }
rustversion = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
