[package]
name = "hemtt-paa"
version = "1.0.1"
edition = "2024"
description = "An PAA library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hemtt-lzo = { path = "../lzo", features = ["decompress"], default-features = false }

byteorder = { workspace = true }
texpresso = "2.0.1"
image = "0.25.5"

# WASM
js-sys = { version = "0.3.77", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }

# JSON
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0.68", optional = true }
base64 = { version = "0.22.1", optional = true }

[features]
wasm = ["wasm-bindgen", "js-sys"]
json = ["serde", "serde_json", "base64"]
