[package]
name = "hemtt-paa"
version = "1.0.1"
edition = "2024"
description = "An PAA library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hemtt-lzo = { path = "../lzo", features = ["decompress"], default-features = false }

byteorder = { workspace = true }
fs-err = { workspace = true }
image = "0.25.9"
texpresso = "2.0.2"

# WASM
js-sys = { version = "0.3.82", optional = true }
wasm-bindgen = { version = "0.2.105", optional = true }

# JSON
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
base64 = { version = "0.22.1", optional = true }

[features]
wasm = ["wasm-bindgen", "js-sys"]
json = ["serde", "serde_json", "base64"]
generate = ["hemtt-lzo/compress"]
