[package]
name = "hemtt-pbo"
version = "1.0.1"
edition = "2021"
description = "An PBO library for hemtt"
license = "GPL-2.0"

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common", version = "1.0.0" }

byteorder = { workspace = true }
indexmap = "2.0.0"
serde = { workspace = true }
sha-1 = { workspace = true }
