[package]
name = "hemtt-pbo"
version = "1.0.1"
edition = "2024"
description = "An PBO library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common" }

byteorder = { workspace = true }
indexmap = { workspace = true }
sha-1 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
