[package]
name = "hemtt-preprocessor"
version = "1.0.0"
edition = "2024"
description = "A preprocessor library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common" }
hemtt-workspace = { path = "../workspace" }

automod = { workspace = true }
dashmap = { workspace = true }
lsp-types = { workspace = true, optional = true }
peekmore = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.8.2"
fs-err = { workspace = true }
paste = { workspace = true }

[features]
lsp = ["hemtt-workspace/lsp", "lsp-types"]

[[bench]]
name = "ace_dogtags"
harness = false
