[package]
name = "hemtt-project"
version = "1.0.0"
edition = "2021"
description = "Project configuration for HEMTT"
license = "GPL-2.0"

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common", version = "1.0.0" }
hemtt-pbo = { path = "../pbo", version = "1.0.0" }

git2 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
vfs = { workspace = true }
