[package]
name = "hemtt-signing"
version = "1.0.0"
edition = "2024"
description = "A signing library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common" }

hemtt-pbo = { path = "../pbo" }

byteorder = { workspace = true }
crypto-bigint = { version = "0.7.0-rc.9", features = ["alloc"] }
rand = { workspace = true }
rsa = "0.10.0-rc.9"
sha-1 = { workspace = true }
thiserror = { workspace = true }
