[package]
name = "hemtt-signing"
version = "1.0.0"
edition = "2024"
description = "A signing library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common" }

hemtt-pbo = { path = "../pbo" }

byteorder = { workspace = true }
crypto-bigint = { version = "0.7.0-rc.10", features = ["alloc"] }
rand = "0.10.0-rc.5"
rand_core = "=0.10.0-rc-2"
chacha20 = "0.10.0-rc.5"
rsa = "0.10.0-rc.8"
sha-1 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
fs-err = { workspace = true }
