[package]
name = "hemtt-signing"
version = "1.0.0"
edition = "2024"
description = "A signing library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common" }

hemtt-pbo = { path = "../pbo" }

argon2 = "0.6.0-rc.5"
bincode = "1.3.3"
byteorder = { workspace = true }
crypto-bigint = { version = "0.7.0-rc.10", features = ["alloc"] }
rand = "0.10.0-rc.5"
rand_core = "=0.10.0-rc-2"
chacha20 = "0.10.0-rc.5"
chacha20poly1305 = "0.11.0-rc.2"
rsa = "0.10.0-rc.8"
serde = { workspace = true }
sha-1 = { workspace = true }
thiserror = { workspace = true }
zeroize = "1.8.2"

[dev-dependencies]
fs-err = { workspace = true }
