[package]
name = "hemtt-sqf"
version = "1.0.0"
edition = "2021"
description = "An sqf library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common", version = "1.0.0" }
hemtt-lzo = { path = "../lzo", version = "1.0.0", optional = true }
hemtt-workspace = { path = "../workspace", version = "1.0.0" }

arma3-wiki = { workspace = true }
automod = { workspace = true }
byteorder = { workspace = true, optional = true }
chumsky = { workspace = true, optional = true}
float-ord = "0.3.2"
linkme = { workspace = true }
rust-embed = { workspace = true, optional = true }
toml = { workspace = true }
tracing = { workspace = true }

[features]
default = ["asc", "compiler", "parser"]
asc = ["rust-embed"]
compiler = ["byteorder", "hemtt-lzo"]
parser = ["chumsky"]

[dev-dependencies]
hemtt-preprocessor = { path = "../preprocessor" }
paste = { workspace = true }
