[package]
name = "hemtt-sqf"
version = "1.0.0"
edition = "2024"
description = "An sqf library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
hemtt-common = { path = "../common" }
hemtt-lzo = { path = "../lzo", optional = true }
hemtt-workspace = { path = "../workspace" }

arma3-wiki = { workspace = true }
automod = { workspace = true }
byteorder = { workspace = true, optional = true }
chumsky = { workspace = true, optional = true}
float-ord = "0.3.2"
linkme = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[features]
default = ["compiler", "parser"]
compiler = ["byteorder", "hemtt-lzo"]
parser = ["chumsky"]

[dev-dependencies]
hemtt-preprocessor = { path = "../preprocessor" }
insta = { workspace = true }
paste = { workspace = true }
