[package]
name = "hemtt-stringtable"
version = "1.0.0"
edition = "2021"
description = "A stringtable library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[dependencies]
hemtt-common = { path = "../common", version = "1.0.0" }
hemtt-workspace = { path = "../workspace", version = "1.0.0" }

automod = { workspace = true }
casey = "0.4"
linkme = { workspace = true }
paste = { workspace = true }
quick-xml = { version = "0.37.0", features = ["serialize"] }
serde = { workspace = true, features = ["derive"] }
serde-aux = "4.5.0"
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
