[package]
name = "hemtt-stringtable"
version = "1.0.0"
edition = "2021"
description = "A stringtable library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[dependencies]
hemtt-common = { path = "../common", version = "1.0.0" }
hemtt-workspace = { path = "../workspace", version = "1.0.0" }

automod = { workspace = true }
casey = "0.4.2"
indexmap = { workspace = true }
linkme = { workspace = true }
paste = { workspace = true }
quick-xml = { version = "0.37.2", features = ["serialize"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }
vfs = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
