[package]
name = "hemtt-stringtable"
version = "1.0.0"
edition = "2024"
description = "A stringtable library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[dependencies]
hemtt-common = { path = "../common" }
hemtt-workspace = { path = "../workspace" }

automod = { workspace = true }
byteorder = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
linkme = { workspace = true }
paste = { workspace = true }
quick-xml = { version = "0.38.4", features = ["serialize"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.7.0"
insta = { workspace = true }

[[bench]]
name = "read"
harness = false
