[package]
name = "hemtt-workspace"
version = "1.0.0"
edition = "2024"
description = "A workspace library for hemtt"
license = "GPL-2.0"

[lints]
workspace = true

[dependencies]
hemtt-common = { path = "../common" }
hemtt-pbo = { path = "../pbo" }

ansi_term = "0.12.1"
codespan-reporting = { workspace = true }
dirs = { workspace = true }
intervaltree = "0.2.7"
linkme = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
supports-hyperlinks = { workspace = true }
terminal-link = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
vfs = { workspace = true }

tower-lsp = { workspace = true, optional = true }

[features]
default = []
lsp = ["tower-lsp"]
